--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
   background-color: hsl(217, 54%, 11%);
   color: hsl(0, 0%, 100%);
   font-family: "Outfit", sans-serif;
+  height: 100vh;
 }
 
 img {
@@ -55,7 +56,7 @@ img {
 .container {
   position: relative;
   width: 350px;
-  margin: 150px auto 140px auto;
+  margin: 5em auto 0 auto;
   padding: 20px;
   background-color: hsl(216, 50%, 16%);
   border-radius: 15px;
