--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
   background-color: hsl(217, 54%, 11%);
   color: hsl(0, 0%, 100%);
   font-family: "Outfit", sans-serif;
-  height: 100vh;
 }
 
 img {
@@ -56,7 +55,7 @@ img {
 .container {
   position: relative;
   width: 350px;
-  margin: 5em auto 0 auto;
+  margin: 5em auto 5em auto;
   padding: 20px;
   background-color: hsl(216, 50%, 16%);
   border-radius: 15px;
