--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ img {
 }
 
 .imag {
-  border-radius: 15px;
+  border-radius: 10px;
 }
 
 .container_imag {
@@ -29,7 +29,7 @@ img {
   background-color: hsl(178, 100%, 50%);
   width: 300px;
   height: 300px;
-  border-radius: 15px;
+  border-radius: 10px;
   transition: all 0.6s ease-out 0.1s;
   opacity: 0;
 }
@@ -44,18 +44,19 @@ img {
   border-top: 1px solid hsl(215, 32%, 27%);
 }
 
-.img_creator {
-  width: 10%;
-  max-width: 10%;
-  margin-right: 10px;
-  border: 2px solid hsl(0, 0%, 100%);
-  border-radius: 50%;
-}
-
 .img_creator,
 .text_creator {
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: bottom;
+}
+
+.img_creator {
+  width: 14%;
+  max-width: 14%;
+  margin-right: 10px;
+  margin-top: 15px;
+  outline: 1px solid hsl(0, 0%, 100%);
+  border-radius: 50%;
 }
 
 .container {
@@ -63,14 +64,14 @@ img {
   width: 350px;
   padding: 25px;
   background-color: hsl(216, 50%, 16%);
-  border-radius: 15px;
+  border-radius: 10px;
   box-shadow: 0px 25px 5px 20px hsl(222, 54%, 11%);
 }
 
 .container_text {
   color: hsl(215, 51%, 70%);
   font-size: 18px;
-  /* margin-bottom: 0; */
+  margin: 0;
 }
 
 .container_moreinfo {
@@ -99,6 +100,7 @@ img {
 .text_name:hover {
   color: hsl(178, 100%, 50%);
   cursor: pointer;
+  transition: all 0.6s ease-out;
 }
 
 .container_imag:hover {
